--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -38,3 +38,4 @@ jobs:
         run: |
           rsync -avz --delete ./.output/ ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/torelas-pay/
           rsync -avz --delete ./ecosystem.config.js ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }}:/var/www/torelas-pay/
+          ssh ${{ secrets.SERVER_USERNAME }}@${{ secrets.SERVER_IP }} 'cd /var/www/torelas-pay && pm2 restart ecosystem.config.js || pm2 start ecosystem.config.js'
