--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "postinstall": "nuxt prepare"
   },
   "dependencies": {
+    "@types/axios": "^0.9.36",
+    "axios": "^1.7.9",
+    "iconv-lite": "^0.6.3",
     "nuxt": "^3.15.0",
     "vue": "latest",
     "vue-router": "latest"
